<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMIE</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
	
	<!-- Texte titre activity -->
    <string name="title_activity_accueil_eleve">Accueil</string>
    <string name="title_activity_envoi_message">EnvoiMessageActivity</string>
    <string name="title_activity_visualiser_cv">VisualiserCvActivity</string>
    <string name="title_activity_visualiser_message">Message</string>
    <string name="title_activity_deposer_offre">DeposerOffreActivity</string>
    <string name="title_activity_visualiser_offre">Offre</string>
    <string name="title_activity_offre">OffreActivity</string>
    <string name="title_activity_evenement_enquete">EvenementEnqueteActivity</string>
    <string name="title_activity_messagerie">MessagerieActivity</string>
    
    <!-- Texte menu -->
    <string name="text_rechercher">Rechercher</string>
    <string name="text_critere">Critère</string>
    <string name="text_accueil">Accueil</string>
    <string name="text_profil">Profil</string>
    <string name="text_eleves">Eleves</string>
    <string name="text_messagerie">Messagerie</string>
    <string name="text_offre">Offres</string>
    <string name="text_parametres">Paramètres</string>
    <string name="text_logout">Deconnexion</string>
    <string name="text_quitter">Fermer l\'application</string>
    <string name="text_portail_imie">Portail IMIE Bruz</string>
    
    <!-- Texte textview -->
    <string name="text_login">VOTRE MAIL :</string>
    <string name="text_MDP">VOTRE MOT DE PASSE :</string>
    <string name="text_old_MDP">Ancien mot de passe :</string>
    <string name="text_new_MDP">Nouveau mot de passe :</string>
    <string name="text_new_again_MDP">Confirmez :</string>
    <string name="text_connecter">Rester connecté</string>
    <string name="text_mes_cvs">Mon CV</string>
    <string name="text_mes_competence">Mes compétences</string>
    <string name="text_gerer_mon_compte">Gérer mon compte</string>
    <string name="text_modifier_mdp">Modifier mon mot de passe</string>
    <string name="text_supprimer_compte">Supprimer mon compte</string>
    <string name="text_competence">COMPÉTENCES</string>
    <string name="text_competence_voulu">Compétences voulues</string>
    <string name="text_description">Description</string>
    <string name="text_titre">Titre</string>
    <string name="text_message">Message</string>
    <string name="text_destinataire">Destinataire</string>
    <string name="menu_evenement">Evenements</string>
    <string name="text_evenement">Evenements à venir</string>
    <string name="text_enquete">Enquêtes en cours</string>
    <string name="text_derniers_messages">Derniers messages</string>
    <string name="text_messages_archives">Messages archivés</string>
    <string name="text_textview_validation_suppression_offre">Cette action va provoquer la suppression définitive de l\'offre.</string>
    <string name="text_textview_validation_suppression_message">Cette action va provoquer la suppression définitive du message.</string>
    <string name="text_textview_validation_suppression_competence">Cette action va provoquer la suppression définitive de la compétence.</string>
    <string name="text_textview_validation_suppression_cv">Cette action va provoquer la suppression définitive du CV.</string> 
    <string name="text_module_evenement">EVENT</string>
    <string name="text_module_accueil">ACCUE</string>
    <string name="text_module_message">MESSA</string>
    <string name="text_module_news">NEWS</string>
    <string name="text_module_offre">OFFRE</string>
    <string name="text_module_gestion_compte">CPTE</string>
    <string name="text_module_search">SEARCH</string>   
    <string name="text_module_embauche">EMB</string>   
    <string name="text_module_gestion_cv">GESCV</string>
    <string name="text_groupe_imie">Imie</string>
    <string name="text_groupe_entreprise">Entreprise</string>
    <string name="text_groupe_eleve">Eleve</string> 
    <string name="text_validation_suppression">Êtes-vous sur ?</string> 
    <string name="text_supp_Cv">Cv supprimé.</string>
    <string name="text_supp_Competence">Compétence supprimé.</string>
    <string name="text_supp_Message">Message supprimé.</string>
    <string name="text_supp_Offre">Offre supprimé.</string>
    <string name="text_creation_offre">CREATION D\'UNE OFFRE</string>
    <string name="text_edition_offre">MODIFICATION D\'UNE OFFRE</string>
    <string name="text_voiroffre">OFFRE XXXXXX</string>
    <string name="text_login_titre_connexion">CONNECTEZ VOUS A VOTRE COMPTE IMIE POUR ACCÉDER AU PORTAIL</string>
    <string name="text_login_titre_numero_aide">UN PROBLEME D\'IDENTIFICATION ? CONTACTEZ L\'IMIE AU 02 28 01 37 54</string>
    <string name="text_login_placeholder_email">utilisateur@imie.fr</string>
    <string name="text_login_placeholder_mdp">***************</string>
    <string name="text_titre_annonce">TITRE DE L\'ANNONCE :</string>
    <string name="titre_login">ÉCOLE DE LA FILIERE NUMÉRIQUE</string>
    <string name="textview_datedebut">DATE DE DÉBUT : </string>
    <string name="textview_datefin">DATE DE FIN : </string>
    <string name="textview_duree">DURÉE (en mois) :</string> 
    <string name="textview_typedecontrat">TYPE DE CONTRAT :</string>
    <string name="textview_detailcontact">DÉTAIL DU CONTACT :</string>
    <string name="textview_emailcontact">EMAIL DU CONTACT :</string>
    <string name="textview_description">DESCRIPTION :</string>
    <string name="textbutton_offre">VALIDER L\'OFFRE</string>
    <string name="text_bienvenue_imie">PORTAIL DE L\'IMIE</string>
    <string name="text_debutant">Debutant</string>
    <string name="text_confirmer">Confirmer</string>
    <string name="text_apprentit">Apprentit</string>
    <string name="text_maitrise">Maitrise</string>
    <string name="text_db_evenement">EVÈNEMENTS</string>
    <string name="text_db_agenda">VOIR L\'AGENDA ></string>
    <string name="text_profil_etu_cv">VOIR MON CV</string>
    <string name="text_profil_etu_competences">COMPETENCES</string>
    <string name="text_profil_etu_experiences">EXPERIENCES</string>
    <string name="text_profil_titre">MON PROFIL</string>
    <string name="text_creation_message">ÉCRIRE / REPONDRE</string>
    <string name="text_creation_message_destinataires">DESTINATAIRES</string>
    <string name="text_creation_message_sujet">SUJET</string>
	<string name="text_creation_message_corps">MESSAGE</string>
    
    <!-- texte bouton -->
    <string name="text_connexion">CONNEXION</string>
    <string name="text_annulation">Annuler</string>
    <string name="text_envoie">Envoyer</string>
    <string name="text_envoyer_message">ENVOYER UN MESSAGE</string>
    <string name="text_offres_partenaires">OFFRES PARTENAIRES</string>
    <string name="text_deposer_offre">DÉPOSER UNE OFFRE</string>
    <string name="text_modifier_offre">Modifier une offre</string>
    <string name="text_modifier_cv">Modification CV</string>
    <string name="text_visionner_cv">Visionnage CV</string>
    <string name="text_visionner_competence">Compétence</string>
    <string name="text_ancien_mdp">Ancien mot de passe</string>
    <string name="text_nouveau_mdp">Nouveau mot de passe</string>
    <string name="text_conf_nouveau_mdp">Confirmer le nouveau mot de passe</string>
    <string name="text_ajout_comp">Ajout compétence</string>
    <string name="text_modif_comp">Modification compétence</string>
    <string name="text_btn_offres">OFFRES</string>
    <string name="text_btn_vosmessages">MESSAGES</string>
    <string name="text_btn_compte_profil">GÉREZ VOTRE PROFIL</string>
    <string name="text_btn_compte_creer">AJOUTER</string>
    
    <!-- texte description image -->
    <string name="text_descimagebutton">image bouton ajout</string>
    <string name="text_content_dashboard">Accueil IMIE</string>
    <string name="text_evenement_dashboard">EVÈNEMENTS</string>
    
    <!-- Textes exemples -->
    <string name="text_exemple_sujet_offre">Developpeur Android</string>
    <string name="text_exemple_datedebut_offre">10/04/2014</string>
    <string name="text_exemple_datefin_offre">10/04/2014</string>
    <string name="text_exemple_duree_offre">5</string>
    <string name="text_exemple_contact_offre">Jean-Jacques Goldman</string>
    <string name="text_exemple_email_offre">exemple@domaine.fr</string>
    <string name="text_exemple_description_offre">Emploi très agréable et bien payé. Expérience nécessaire</string>
    <string name="text_exemple_date_event">10 juin</string>
    <string name="text_exemple_descri_event">Apéro cohésion</string>
    <string name="text_exemple_addresse_event">Rue de Maupertuis, Bruz</string>
    
    <!-- Texte toast -->
    <string name="text_toast_accepte_evenement">Votre participation à l\'évènement à été prise en compte</string>
    <string name="text_toast_decline_evenement">Vous avez décliner l\'invitation à l\'évènement</string>
    <string name="text_toast_blank_password">Veuillez remplir les champs</string>
    <string name="text_toast_different_password">Les mots de passe ne correspondent pas</string>
    <string name="text_toast_wrong_oldpwd">L\'ancien mot de passe ne correspond pas</string>
    <string name="text_toast_wrong_login_mdp">Mauvais login ou mot de passe</string>
    <string name="text_toast_edit_mdp">Mot de passe modifié</string>
    <string name="text_toast_pb_connexion">Un problème est survenu, veuillez vous reconnecter</string>
    <string name="text_toast_loading">Chargement&#8230;</string>
    <string name="text_toast_pb_unread_msg">Impossible de récupérer le nombre de message non lu</string>
    
    
    <!-- URL -->
    <string name="url_base_api">http://imierennes.no-ip.biz:10080/imie-network-website/web/app_dev.php/api/</string>
    <string name="url_utilisateur">utilisateur/</string>
    <string name="url_pwd_update">/password-update.json</string>
    <string name="url_competence">competence/</string>
    <string name="url_utilisateur_competence_ajout">/password-update.json</string>
    <!-- FIN URL -->
    
    <!-- PARAMETRES -->
    
    <!-- Généraux -->
    <string name="gen_id_user">utlisateur_id</string>
    <string name="gen_token">token</string>
    
    <!-- Edition password -->
    <string name="edit_pwd_old_pwd">old_password</string>
    <string name="edit_pwd_new_pwd">new_password</string>
        
    <!-- FIN STRING PARAMETRES -->
    
    
    <string-array name="array_names">
	    <item>Contrat en alternance</item>
	    <item>CDD</item>
	    <item>CDI</item>
	</string-array>
	
	<string-array name="array_name_values">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	</string-array>
	
	<string name="text_adresse_api_webservice">http://imierennes.no-ip.biz:10080/imie-network-website/web/app_dev.php/api/</string>
    
</resources>

